05-Ingress/old/07-ALB-Ingress-Group-with-IP-Mode-for-fargate.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-webapp-svc
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /info
    alb.ingress.kubernetes.io/group.name: web-app-group
    alb.ingress.kubernetes.io/group.order: "1"
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /info
        pathType: Prefix
        backend:
          service:
            name: python-webapp-svc
            port:
              number: 31007
